<resources>
    <string name="app_name">设计家</string>
    <string name="title_messagecenter">消息中心</string>
    <string name="item_messagecenter_tital">消息中心</string>
    <string name="project_update__messagecenter_detail">项目更新详情</string>
    <string name="nodata">暂无数据</string>
    <string name="noinfo">暂无介绍</string>
    <string name="add_material">添加主材</string>
    <string name="six">6</string>
    <string name="brand">个品牌</string>
    <string name="add">还可添加</string>
    <string name="add_brands_for_list">添加至清单</string>
    <string name="send_single_number">派单人数： </string>
    <string name="send_design">派单设计师</string>
    <string name="accept_mearch">接收量房交付物</string>
    <string name="nodescription">暂无介绍</string>
    <string name="nodescription_price">未填写</string>
    <string name="dianzanshu">"点赞数  "</string>
    <string name="thumbup_conunt">点赞数</string>
    <string name="bank_name_empty">开户银行不能为空</string>
    <string name="title_introduce">说明</string>
    <string name="delivery_delayed">延期</string>
    <string name="delivery_sure">确认</string>
    <string name="delivery_delayed_days">距离系统确认时间还有</string>
    <string name="delivery_delayed_instructions">1、确认，表示您认可设计师提交的设计交付，设计师将不可以再对设计交付做修改。
        \n2、延期，将会把确认时间延长７天。您有一次延期确认的机会。
        \n3、请在设计师提交设计交付后７日内确认设计师提供的交付资料是否完整。如果在７日内不做处理，系统将默认您确认了设计交付。</string>
    <string name="flow_upload_delivery_delay">延期确认?</string>
    <string name="flow_upload_delivery_delay_only">您只有一次延期确认机会</string>
    <string name="flow_upload_delivery_delay_success">延期确认成功</string>
    <string name="flow_upload_delivery_delay_contact_designer">请联系设计师对设计交付资料做调整</string>
    <string name="delivery_sure_success">确认成功</string>
    <string name="delivery_sure_success_content">请对设计师这次的设计服务做评价</string>
    <string name="delivery_immediate_evaluation">立即评价</string>
    <string name="delivery_later_evaluation">稍后评价</string>
    <string name="cardholder">持&#160;&#160;卡&#160;&#160;人：</string>
    <string name="please_enter_name">请输入您的姓名</string>
    <string name="please_select_an_account">请输入您的姓名</string>
    <string name="please_select_measure_time">请选择量房时间</string>
    <string name="please_select_bank">请选择您的开户银行</string>
    <string name="please_enter_the_name_of_the_branch">请输入支行名称</string>
    <string name="please_enter_the_bank_card_number">请输入银行卡号</string>
    <string name="are_you_sure_unbundling">您确定要将此银行卡解除绑定吗？</string>
    <string name="evaluation_abandon_msg">您确定要放弃评价吗？</string>
    <string name="evaluation_abandon">放弃</string>
    <string name="evaluation_continue_edit">继续编辑</string>
    <string name="evaluation_success_title">评论成功</string>
    <string name="evaluation_success_msg">您的评价将在设计师个人主页中展示</string>
    <string name="m2">m²</string>
    <string name="warmTips">温馨提示：</string>
    <string name="Mrasuretips">提示：</string>
    <string name="illustrate">  量房费说明</string>
    <string name="rule_instructions">规则说明</string>
    <string name="rule_instructions_content">在线直接预约工作室，或直接填写您的设计需求，平台会在24小时内与您联系</string>
    <string name="update_measure_house_cost">量房费可更改</string>
    <string name="no_pay_rent">量房费为0时，不需要支付量房费。</string>
    <string name="check_name_tip">请输入正确的姓名</string>
    <string name="designer_works">作品：</string>
    <string name="attention_number">关注人数：</string>
    <string name="profession">擅长：</string>
    <string name="warm_tips_content">签订设计合同后，您所支付的量房费将会抵消等额的设计费。</string>
    <string name="appraise_designer">评分 :</string>
    <string name="appraise_designer_title">评价</string>
    <string name="appraise_designer_hint">写下这次设计服务的体会，分享给其他小伙伴～</string>
    <string name="appraise_designer_submit">提交</string>
    <string name="appraise_designer_tips">您还没有对设计师的服务进行评价</string>
    <string name="my_attention">我的关注</string>
    <string name="attention_num">关注人数&#160;：</string>
    <string name="attention_success">关注成功</string>
    <string name="attention_sure">关注</string>
    <string name="attention_sure_add">+关注</string>
    <string name="attention_cancel">取消关注</string>
    <string name="attention_tip_message_first">您确定取消对</string>
    <string name="attention_tip_message_last">的关注吗？</string>
    <string name="following_sure">确定</string>
    <string name="following_cancel">取消</string>
    <string name="following_no_data">您还没有关注的设计师</string>
    <string name="not_found">暂无结果</string>
    <string name="please_enter_words">请输入15~200字</string>
    <string name="you_have_not_score">您还没有评分哦</string>
    <string name="input_content_cannot_have_char">输入的内容不能包含特殊字符</string>
    <string name="save_success">已保存到本地相册</string>
    <string name="save_failure">保存失败</string>
    <string name="jiechubangding">解绑成功</string>
    <string name="anzhuangweixin">请先安装微信</string>
    <string name="dianzhangchenggong">点赞成功</string>
    <string name="tixian_status">状&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;态：</string>
    <string name="tixian_number">提现金额：</string>
    <string name="tixian_liushuihao">流&#160;&#160;水&#160;&#160;号：</string>
    <string name="title_activity_select_designer">selectDesignerActivity</string>
    <string name="user_phone">手机号码：</string>
    <string name="decoration_style">风格：</string>
    <string name="end_day_prefix">距离结束还有</string>
    <string name="end_day_postfix">天</string>
    <string name="title_designer_count">应标人数</string>
    <string name="title_bidder_introduce">应标说明</string>
    <string name="alert_bidder_introduce">为了保障您的权益，我们允许3位设计师前来应标。如果您不满意应标的设计师，您可以拒绝TA，以允许其他设计师可以来应标。</string>
    <string name="title_decoration_detail">需求详情</string>
    <string name="button_decoration_stop">终止需求</string>
    <string name="alert_decoration_title">确认要终止需求？</string>
    <string name="alert_decoration_message">终止需求后项目就会结束</string>
    <string name="button_decoration_amend">修改需求</string>
    <string name="content_designer_good_at">擅长：</string>
    <string name="content_others">其他</string>
    <string name="loginguoqi">登陆过期</string>
    <string name="canshuyichang">参数错误</string>
    <string name="caozuoerror">当前操作不合法</string>
    <string name="apierrror">API内部异常</string>
    <string name="http402">服务器开小差中</string>
    <string name="http404">服务器走丢了</string>
    <string name="fanganflow">请在PC端进行3D方案的创建</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_wk_flow_node">WkFlowNode</string>
    <string name="packages_yuyue">立即预约</string>
    <string name="title_average_rule">规则说明</string>
    <string name="alert_average_rule_1">1.在线发布需求，3位设计师可同时竞标，对不满意的设计师可进行更换</string>
    <string name="alert_average_rule_2">2.预约设计师量房，量房费可议价</string>
    <string name="alert_average_rule_3">3.签定设计合同量房费自动转入设计费</string>
    <string name="close_alert">关闭</string>
    <string name="project_biding">应标中</string>
    <string name="project_designing">设计中</string>
    <string name="project_finish">项目完成</string>
    <string name="project_stop">项目结束</string>
    <string name="error_state">未知状态</string>
    <string name="no_set_measure_fee">未设置量房费 不能应标</string>
    <string name="succes_grandmaster">大师预约成功</string>
    <string name="succes_package">预约成功</string>
    <string name="fail_grandmaster">大师预约失败</string>
    <string name="fail_package">预约失败</string>
    <string name="key_words">请输入关键字搜索</string>
    <string name="diy_one">为有设计创意的客户提供</string>
    <string name="diy_easy">简单</string>
    <string name="diy_user">易用</string>
    <string name="diy_free">免费</string>
    <string name="diy_tool">DIY设计工具</string>
    <string name="diy_two">可以生成施工图和参考报价</string>
    <string name="diy_three">免费使用3D工具，设计自己的家</string>
    <string name="diy_four">自由搭配真实家居产品，提前预览装修效果，</string>
    <string name="diy_five">免费获取施工图纸和参考报价。</string>
    <string name="diy_six">请在网页端开启设计之旅</string>
    <string name="alert_three_plan">请先选择3D设计方案</string>
    <string name="alert_delivery">您还没有上传设计图纸，</string>
    <string name="alert_blue_print">请先在web端上传设计图纸</string>
    <string name="alert_material">请先在web端上传材料清单</string>
    <string name="bind_per">位设计师</string>
    <string name="other_qita">其他</string>
    <string name="thumbUp">点赞</string>
    <string name="application_successful">申请成功</string>
    <string name="application_failure">申请失败</string>
    <string name="application_detail">请在提现记录中查看详情</string>
    <string name="application_unbing">解除绑定成功</string>
    <string name="tip_content_one">持卡人姓名不能为空</string>
    <string name="tip_content_two">支行名称不能为空</string>
    <string name="tip_content_three">银行卡号不能为空</string>
    <string name="application_unbing_fail">解除失败</string>
    <string name="tip_withdrawal_record">您目前还没有进行提现</string>
    <string name="tip_transaction_record">您目前还没有进行交易</string>
    <string name="tip_stop">您确定要与设计师终止合作吗？</string>
    <string name="serviced">设计师已做过量房服务</string>
    <string name="serviceding">设计师未提供量房服务</string>
    <string name="tip_success">保存成功</string>
    <string name="network_error">网络连接失败!</string>
    <string name="call_phone">拨打</string>
    <string name="call_number">拨打400-650-3333？</string>
    <string name="designer_bid_detail_bid">是否确定应标</string>
    <string name="designer_bid_detail_realy_name">请先到个人中心完成实名认证</string>
    <string name="designer_bid_detail_realy_immediately_validation">立即验证</string>
    <string name="designer_bid_detail_success">应标成功</string>
    <string name="consume_send_success">选TA量房成功</string>
    <string name="alipay_error">支付失败！</string>
    <string name="designer_no_real_name">设计师未通过认证</string>
    <string name="autonym_no_self_identity">本人持证正面照上传成功</string>
    <string name="autonym_no_identity_front">身份证正面照上传成功</string>
    <string name="autonym_no_identity_contrary">身份证反面照上传成功</string>
    <string name="autonym_information_delivery">提交信息</string>
    <string name="design_contract">设计合同</string>
    <string name="send_design_contract">发送设计合同</string>
    <string name="uploaded_deliverable">上传量房交付物</string>
    <string name="in_contract_sent">合同发送中...</string>
    <string name="agree_and_send_design_first">同意并支付设计首款</string>
    <string name="agree_and_send_design_first_new">立即付款</string>
    <string name="confirmation_and_payment">确认并付款</string>
    <string name="receiving_room_deliverable">接收量房交付物</string>
    <string name="flow_contract_num">合同编号：</string>
    <string name="flow_basic_info">基本信息</string>
    <string name="flow_first_design_cost">设计首款：</string>
    <string name="flow_last_design_cost">设计尾款：</string>
    <string name="name_space">姓&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;名：</string>
    <string name="telephone_space">电&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;话：</string>
    <string name="flow_particular_cost">支付明细</string>
    <string name="flow_aggregate_amount">总&#160;&#160;金&#160;&#160;额：</string>
    <string name="flow_pay_way">支付方式：</string>
    <string name="flow_should_first">本次应付设计首款：</string>
    <string name="flow_deduct_measure_cost">已扣除量房费</string>
    <string name="flow_agree_pay">同意合同并支付首款</string>
    <string name="please_enter_correct_address">请输入正确的小区名称(字符长度为2-32之间且不包含特殊字符)</string>
    <string name="bid_num">应标人数： </string>
    <string name="consuer_data">客户资料</string>
    <string name="consume_phone">联系电话：</string>
    <string name="consume_phone_hint">手机号码：</string>
    <string name="consume_adress">房屋地址：</string>
    <string name="consume_adress_hint">选择地址</string>
    <string name="consume_detail_address">小区名称：</string>
    <string name="complete">完成</string>
    <string name="common_delete">删除</string>
    <string name="recommend_brand_name">品牌名称</string>
    <string name="recommend_brand_change">品牌变更</string>
    <string name="recommend_num">数量：</string>
    <string name="recommend_dimension">规格：</string>
    <string name="recommend_apartment">空间：</string>
    <string name="recommend_remarks">备注：</string>
    <string name="recommend_mall_name">店面：</string>
    <string name="recommend_hint_num">请填写数量（单位）</string>
    <string name="recommend_hint_dimension">请填写规格</string>
    <string name="recommend_hint_remarks">请填写备注</string>
</resources>