<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/tv_brand_name"
            style="@style/item_text_style"
            android:layout_gravity="left"
            android:paddingTop="14dp"
            android:text="@string/recommend_brand_name"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_brand_change"
            style="@style/item_text_style"
            android:layout_alignParentRight="true"
            android:layout_gravity="left"
            android:paddingTop="14dp"
            android:text="@string/recommend_brand_change"
            android:textColor="@color/search_text_color"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/tv_num"
            style="@style/item_text_style"
            android:layout_marginTop="@dimen/size_4"
            android:text="@string/recommend_num"/>

        <EditText
            android:id="@+id/et_brand_num"
            style="@style/style_edit_text"
            android:layout_width="@dimen/size_160"
            android:layout_height="@dimen/size_30"
            android:layout_toRightOf="@id/tv_num"
            android:hint="@string/recommend_hint_num"
            android:maxLines="1"
            />

        <TextView
            android:id="@+id/tv_brand_delete"
            style="@style/item_text_style"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/size_5"
            android:gravity="center_vertical"
            android:text="@string/common_delete"
            android:textColor="@color/search_text_color"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            style="@style/item_text_style"
            android:text="@string/recommend_dimension"/>

        <EditText
            android:id="@+id/et_brand_dimension"
            style="@style/style_edit_text"
            android:layout_width="@dimen/size_160"
            android:layout_height="@dimen/size_30"
            android:ellipsize="end"
            android:hint="@string/recommend_hint_dimension"
            android:maxLines="1"
            android:singleLine="true"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            style="@style/item_text_style"
            android:text="@string/recommend_apartment"/>

        <com.autodesk.shejijia.consumer.personalcenter.recommend.view.customspinner.MaterialSpinner
            android:id="@+id/spinner_brand_apartment"
            android:layout_width="@dimen/size_160"
            android:layout_height="@dimen/size_30"
            android:layout_gravity="start|center_vertical"
            android:textSize="@dimen/font_15"
            app:ms_dropdown_height="wrap_content"
            app:ms_dropdown_max_height="@dimen/size_200"
            app:ms_text_color="@color/black"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            style="@style/item_text_style"
            android:layout_gravity="start|top"
            android:text="@string/recommend_remarks"/>

        <EditText
            android:id="@+id/et_brand_remarks"
            style="@style/style_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/recommend_hint_remarks"
            android:maxLength="200"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            style="@style/item_text_style"
            android:layout_height="match_parent"
            android:text="@string/recommend_mall_name"/>

        <TextView
            android:id="@+id/tv_brand_mall_name"
            style="@style/item_text_style"
            android:lineSpacingMultiplier="1.2"
            android:text=""/>
    </LinearLayout>

    <include
        layout="@layout/line_view"/>

    <include layout="@layout/item_recommend_button_footer"></include>


</LinearLayout>

