<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include
        android:id="@+id/common_navbar"
        layout="@layout/view_navigation_header" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_eef1f4"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_40"
                android:layout_marginLeft="@dimen/size_10"
                android:layout_marginRight="@dimen/size_10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/consuer_data"
                    android:textSize="@dimen/font_18"/>
            </RelativeLayout>

            <include layout="@layout/view_common_line"/>

            <LinearLayout
                android:id="@+id/ll_personal_designer_info"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_50"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/size_10"
                    android:text="@string/name_space"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_15"/>

                <TextView
                    android:id="@+id/tv_consumer_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/size_10"
                    android:background="@null"
                    android:textSize="@dimen/font_15"/>
            </LinearLayout>

            <include layout="@layout/view_common_line"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_50"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/size_10"
                    android:text="@string/consume_phone"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_15"/>

                <com.autodesk.shejijia.consumer.uielements.TextViewContent
                    android:id="@+id/et_consumer_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/size_10"
                    android:background="@null"
                    android:hint="@string/consume_phone_hint"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:singleLine="true"
                    android:textSize="@dimen/font_15"/>
            </LinearLayout>

            <include layout="@layout/view_common_line"/>

            <LinearLayout
                android:id="@+id/ll_consumer_address"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_50"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/size_10"
                    android:text="@string/consume_adress"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_15"/>

                <TextView
                    android:id="@+id/tv_consumer_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/size_10"
                    android:background="@null"
                    android:ellipsize="end"
                    android:hint="@string/consume_adress_hint"
                    android:singleLine="true"
                    android:textSize="@dimen/font_15"/>
            </LinearLayout>

            <include layout="@layout/view_common_line"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_50"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/size_10"
                    android:text="@string/consume_detail_address"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_15"/>

                <EditText
                    android:id="@+id/et_consumer_detail_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/size_10"
                    android:background="@null"
                    android:ellipsize="end"
                    android:hint="@string/please_enter_correct_address"
                    android:singleLine="true"
                    android:textSize="@dimen/font_15"/>
            </LinearLayout>

            <include layout="@layout/view_common_line"/>

            <Button
                android:id="@+id/btn_consumer_finish"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_40"
                android:layout_marginLeft="@dimen/size_30"
                android:layout_marginRight="@dimen/size_30"
                android:layout_marginTop="@dimen/size_60"
                android:background="@color/zxing_corner"
                android:text="@string/complete"
                android:textColor="@color/comment_write"/>
        </LinearLayout>

    </ScrollView>
</LinearLayout>