<?xml version="1.0" encoding="utf-8"?><!--应标人数-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/rl_bidder_count"
                android:layout_width="match_parent"
                android:layout_height="@dimen/mybid_item_footer_height"
                android:layout_marginLeft="@dimen/size_10"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/size_10"
                android:paddingTop="@dimen/size_10">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_bid_num"
            style="@style/BidItem.Text"
            android:text="@string/bid_num"/>

        <TextView
            android:id="@+id/tv_bidder_count"
            style="@style/BidItem.Text.Light"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/tv_show_persion_tip"
            style="@style/BidItem.Text"
            android:layout_centerVertical="true"
            android:text="人"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_gravity="center_vertical">

        <ImageView
            android:id="@+id/iv_icon_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@drawable/abc_icon_time"
            android:visibility="invisible"/>

        <TextView
            style="@style/BidItem.Text.Light"
            android:text="@string/end_day_prefix"/>

        <TextView
            android:id="@+id/tv_decoration_end_day"
            style="@style/BidItem.Text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="@dimen/font_16"
            tools:text="10"/>

        <TextView
            style="@style/BidItem.Text.Light"
            android:layout_marginRight="@dimen/size_10"
            android:text="@string/end_day_postfix"/>
    </LinearLayout>

</RelativeLayout>
